--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@ color: aliceblue;
 li{
     color: aliceblue;
 }
-h6{
-    color: aliceblue;
-}
+
 h2{
     color: aliceblue;
 }
@@ -37,8 +35,6 @@ a {
 </style>
 </head>
 <body>
-    </head>
-<body>
     <header>
         <img src="images/IMG_0403.jpg" alt="Swan Brew" width="45">
         <img src="images/Navigation.pdf" alt="Nav">
@@ -54,24 +50,19 @@ a {
             </ul>
         </nav>
     </header>
-    <hr>
     <main>
     <section id="hero">
         <img src="images/IMG_0402.jpg" alt="Чашка кави та матча з лебедем" width="150">
-        <h6>Sweet coffee and matcha, full of inspiration</h6>
+        <p>Sweet coffee and matcha, full of inspiration</p>
      <h2><em>Відчуй тепло й спокій всередині разом із нашою <br>
         кавою та матча — напоями, створеними для моментів <br>
         тиші, натхнення і справжньої насолоди.</em></h2>
-    <p></p>
-    <a href="#products">
+    <a href="#products"></a>
   <button>Buy Now</button>
-</a>
      </section>
-     <hr>
-     </main>
      <section id="about">
-  <h2>Про наш бренд</h2>
-  <p><b><i>
+  <h3>Про наш бренд</h3>
+  <p>
     Swan Brew — це простір спокою, тепла та смаку. <br>
     Кожна чашка — це момент для себе, пауза серед <br>
     швидкого світу та можливість відчути <br>
@@ -88,10 +79,9 @@ a {
   <p>
     Кава — джерело енергії та натхнення,<br>
      а матча — баланс і спокій.
-  </i></b></p>
+ </p>
 </section>
-<hr>
-<section id="products">
+<section id="menu">
   <h4>Наш асортимент</h4>
   <p>
     У нашому меню — класична кава, ніжна матча <br>
@@ -102,58 +92,54 @@ a {
   <article>
     <img src="images/8712838A-4C00-4E92-B07F-83ED4017B546.JPEG" alt="Чашка Айс Лате" width="200">
      <h3>Айс Лате</h3>
-    <h6>Освіжаючий холодний лате з <br>
-        молочною піною та кубиками льоду.</h6>
-    <p>Ціна: $4.50 <a href="#order"><button>Замовити зараз</button></a></p>
+    <p>Освіжаючий холодний лате з <br>
+        молочною піною та кубиками льоду.</p>
+    <p>Ціна: $4.50 <button>Замовити зараз</button></p>
   </article>
-
   <article>
     <img src="images/61DDD3FA-CF8C-418C-B628-E9772CB6C9FD.JPEG" alt="Чашка Айс Матча" width="200">
      <h3>Айс Матча</h3>
-    <h6>Ніжна холодна матча з льодом <br>
-        для енергії та свіжості цілий день.</h6>
-    <p>Ціна: $5.00 <a href="#order"><button>Замовити зараз</button></a></p>
+    <p>Ніжна холодна матча з льодом <br>
+        для енергії та свіжості цілий день.</p>
+    <p>Ціна: $5.00 <button>Замовити зараз</button></p>
   </article>
-
   <article>
     <img src="images/6C802AFB-5A44-443C-8B66-C1563ED6C599.JPEG" alt="Чашка Ванільного Лате" width="200">
      <h3>Ванільне Лате</h3>
-    <h6>М’який лате з ароматом ванілі. <br>
-        Теплий і затишний напій для будь-якого настрою.</h6>
-    <p>Ціна: $4.75 <a href="#order"><button>Замовити зараз</button></a></p>
+    <p>М’який лате з ароматом ванілі. <br>
+        Теплий і затишний напій для будь-якого настрою.</p>
+    <p>Ціна: $4.75 <button>Замовити зараз</button></p>
   </article>
-
   <article>
     <img src="images/67AD79A9-9683-4FFC-A338-DBACCA858623.JPEG" alt="Матча смузі з манго" width="200">
     <h3>Матча Смузі з манго</h3>
-    <h6>Смузі з матча та манго — освіжаючий <br>
+    <p>Смузі з матча та манго — освіжаючий <br>
         напій, який дарує енергію та настрій.</p>
-    <p>Ціна: $5.75 <a href="#order"><button>Замовити зараз</button></a></p>
+    <p>Ціна: $5.75<button>Замовити зараз</button></p>
   </article>
-
   <article>
     <img src="images/B6822267-05E9-4500-91A5-07952638F73F.JPEG" alt="Карамельний Айс Лате" width="200"> 
      <h3>Карамельний Айс Лате</h3>
-    <h6>Освіжаючий лате з льодом та нотками <br>
-        карамелі. Ідеально для солодкого моменту.</h6>
-    <p>Ціна: $5.25 <a href="#order"><button>Замовити зараз</button></a></p>
+    <p>Освіжаючий лате з льодом та нотками <br>
+        карамелі. Ідеально для солодкого моменту.</p>
+    <p>Ціна: $5.25 <button>Замовити зараз</button></p>
     </article>
-    <hr>
+</section>
 <section id="app">
     <h2>Простий спосіб замовити їжу</h2>
 <h4>Деякі напої виглядають дуже просто, але після <br>
     першого ковтка відкривають насичений смак і дарують<br>
      справжнє задоволення. Замовляти улюблений напій <br>
      ніколи не було так легко!</h4>
-<h4>Виберіть свою їжу<br>
+<h4>Простий спосіб замовити їжу</h4>
     <ul>
-<ol>Виберіть свою їжу</ol>
-<ol>Додати в кошик</ol>
-<ol>замовляйте їжу</ol>
+<li>Виберіть свою їжу</li>
+<li>Додати в кошик</li>
+<li>замовляйте їжу</li>
     </ul>
 <img src="images/CTA.pdf" alt="app store play store" width="250">
 </section>
-<hr>
+ </main>
 <form name="register-form">
 <label >
 <h3>have question in mind? <br>
@@ -161,7 +147,6 @@ let us help you</h3><input
 type="text" name="enter your question"/>
 </label>
 <button type="submit">Відправити</button>
-<hr>
 </form>
 <footer>
     <img src="images/IMG_0403.jpg" alt="logo" width="45">
@@ -174,7 +159,7 @@ type="text" name="enter your question"/>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
-  <section id="contact-info">
+  <section id="contact">
     <h3>Контакти</h3>
     <p>Телефон: 0984436201</p>
     <p>Email: <a href="mailto:evaolrks@icloud.com">evaolrks@icloud.com</a></p>
