--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,7 +42,8 @@ a {
         <h1>Swan Brew</h1>
         <nav>
             <ul>
-               <li><a href="#hero">Main</a></li>
+      <li><a href="seasonal.html">Seasonal drinks</a></li>
+      <li><a href="#hero">Main</a></li>
       <li><a href="#about">About Us</a></li>
       <li><a href="#menu">Trainers</a></li>
       <li><a href="#app">App</a></li>
@@ -94,44 +95,44 @@ a {
      <h3>Айс Лате</h3>
     <p>Освіжаючий холодний лате з <br>
         молочною піною та кубиками льоду.</p>
-    <p>Ціна: $4.50 <button>Замовити зараз</button></p>
+    <p><strong>Ціна: $4.50 </strong><button>Замовити зараз</button></p>
   </article>
   <article>
     <img src="images/61DDD3FA-CF8C-418C-B628-E9772CB6C9FD.JPEG" alt="Чашка Айс Матча" width="200">
      <h3>Айс Матча</h3>
     <p>Ніжна холодна матча з льодом <br>
         для енергії та свіжості цілий день.</p>
-    <p>Ціна: $5.00 <button>Замовити зараз</button></p>
+    <p><strong>Ціна: $5.00</strong><button>Замовити зараз</button></p>
   </article>
   <article>
     <img src="images/6C802AFB-5A44-443C-8B66-C1563ED6C599.JPEG" alt="Чашка Ванільного Лате" width="200">
      <h3>Ванільне Лате</h3>
     <p>М’який лате з ароматом ванілі. <br>
         Теплий і затишний напій для будь-якого настрою.</p>
-    <p>Ціна: $4.75 <button>Замовити зараз</button></p>
+    <p><strong>Ціна: $4.75 </strong><button>Замовити зараз</button></p>
   </article>
   <article>
     <img src="images/67AD79A9-9683-4FFC-A338-DBACCA858623.JPEG" alt="Матча смузі з манго" width="200">
     <h3>Матча Смузі з манго</h3>
     <p>Смузі з матча та манго — освіжаючий <br>
         напій, який дарує енергію та настрій.</p>
-    <p>Ціна: $5.75<button>Замовити зараз</button></p>
+    <p><strong>Ціна: $5.75</strong><button>Замовити зараз</button></p>
   </article>
   <article>
     <img src="images/B6822267-05E9-4500-91A5-07952638F73F.JPEG" alt="Карамельний Айс Лате" width="200"> 
      <h3>Карамельний Айс Лате</h3>
     <p>Освіжаючий лате з льодом та нотками <br>
         карамелі. Ідеально для солодкого моменту.</p>
-    <p>Ціна: $5.25 <button>Замовити зараз</button></p>
+    <p><strong>Ціна: $5.25</strong><button>Замовити зараз</button></p>
     </article>
 </section>
 <section id="app">
     <h2>Простий спосіб замовити їжу</h2>
-<h4>Деякі напої виглядають дуже просто, але після <br>
+<h2>Деякі напої виглядають дуже просто, але після <br>
     першого ковтка відкривають насичений смак і дарують<br>
      справжнє задоволення. Замовляти улюблений напій <br>
-     ніколи не було так легко!</h4>
-<h4>Простий спосіб замовити їжу</h4>
+     ніколи не було так легко!</h2>
+<h2>Простий спосіб замовити їжу</h2>
     <ul>
 <li>Виберіть свою їжу</li>
 <li>Додати в кошик</li>
@@ -139,20 +140,21 @@ a {
     </ul>
 <img src="images/CTA.pdf" alt="app store play store" width="250">
 </section>
- </main>
 <form name="register-form">
-<label >
-<h3>have question in mind? <br>
-let us help you</h3><input
-type="text" name="enter your question"/>
+<h2> <em>Є питання? звертайтеся</em></h2>
+<label>
+<input
+type="text" name="enter your question">
 </label>
 <button type="submit">Відправити</button>
 </form>
+ </main>
 <footer>
     <img src="images/IMG_0403.jpg" alt="logo" width="45">
   <nav>
     <ul>
       <li><a href="#hero">Main</a></li>
+      <li><a href="#seasonal">Seasonal drinks</a></li>
       <li><a href="#about">About Us</a></li>
       <li><a href="#menu">Trainers</a></li>
       <li><a href="#app">App</a></li>
